styles/less/widgets.less
@import 'node_modules/relayr-sensor-illustrations/styles/less/main.less';

@mSmallWidgetWidth:   100px;
@mSmallWidgetHeight:  120px;
@mMediumWidgetWidth:  200px;
@mMediumWidgetHeight: 120px;
@mLargeWidgetWidth:   300px;
@mLargeWidgetHeight:  120px;
@mWigetFullMinWidth:  500px;

.mOSmallWidget {
    width: @mSmallWidgetWidth;
    height:  @mSmallWidgetHeight;
    margin: auto;
    vertical-align: top;
}

.mOMediumWidget {
    width: @mMediumWidgetWidth;
    height:  @mMediumWidgetHeight;
    margin: auto;
    vertical-align: top;
}

.mOLargeWidget {
    width: @mLargeWidgetWidth;
    height: @mLargeWidgetHeight;
    margin: auto;
    vertical-align: middle;
}

.mOFullWidget {
    vertical-align: top;
    display: block;
    width: auto;
    box-sizing: border-box;
    min-width: @mWigetFullMinWidth;
}

.mOWidgetBox {
    vertical-align: top;

    .mOWidgetBoxBody {
        padding-bottom: 15px !important;
    }
}

.mONumberWidget {
    font-size: 50px;
    line-height: 120px; /* centers text vertically within widget */
}

.rDropdownMenuOpen .rDropdownMenuBGScreen {
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
}

.rDropdownMenuOpen .rDropdownMenuButton {
    z-index: 2;
    position: relative;
}

.rDropdownMenuButtonNoCaret::after {
    content: '' !important; 
}

